fixed save bug adjusted search and added dark mode

--- a/style.css
+++ b/style.css
@@ -6,6 +6,19 @@
 
  }
 
+ .light{
+    background-color: white;
+    color: black;
+
+}
+
+.dark{
+    background-color: black;
+    color: white;
+    
+}
+
+
 body { 
     display: grid; 
     font-family: sans-serif; 
@@ -41,6 +54,12 @@ body {
         resize: none;
 
 }
+
+
+
+
+
+
 
 
 
@@ -106,11 +125,10 @@ button{
     height: 40px;
     border: 1px solid rgb(62, 62, 62);
     border-radius: 4px;
-    color: black;
     font-size: 20px;
     cursor: pointer;
     outline: none;
-    background-color: white;
+    
 
 }
 
@@ -120,3 +138,101 @@ button{
 #w{ background-color: rgba(5, 17, 243, 0.41); }
 #o{ background-color: rgba(255, 170, 0, 0.38); }
 #c{ background-color: rgba(255, 0, 200, 0.49); }
+
+
+.modeSwitch{
+
+    position: absolute;
+    right: 20px;
+    top: 0;
+}
+
+
+
+.checkbox {
+  opacity: 0;
+
+}
+
+.checkbox-label {
+  background-color: black;
+  width: 50px;
+  height: 26px;
+  border-radius: 50px;
+  position: relative;
+  padding: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.fa-moon {color: #f1c40f;}
+
+.fa-sun {color: #f39c12;}
+
+.checkbox-label .ball {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  border-radius: 50%;
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .checkbox-label .ball {
+  transform: translateX(24px);
+}
+
+.modeState{
+    width: 15px;
+}
+
+
+
+
+
+
+.searchStatus{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    bottom: 10px;
+    right: 10px;
+
+}
+
+
+.save{
+    display: block;
+    position: relative;
+    width: fit-content;
+}
+
+.save .saveIcon {
+    
+    width: 60px;
+}
+
+
+ .isSaved {
+
+    position: absolute;
+    
+    top: 1px;
+    right: 1px;
+    width: 20px;
+}
+
+.lastSave{
+    width: 60px;
+    height: fit-content;
+    font-size: 13px;
+    font-weight: bolder;
+}
